--- a/speedtest.html
+++ b/speedtest.html
@@ -7,8 +7,12 @@
 </head>
 
 <body>
-  <img src="IMG_0822.JPG" alt="" />
-  <img src="http://vtransmap01.aot.state.vt.us/arcgis/rest/services/Rail/CrossingInspection2015/FeatureServer/1/625/attachments/3606" alt="" />
+  <div style="width: 50%">
+    <img src="IMG_0822.JPG" alt="" />  
+  </div>
+  <div style="width: 50%">
+    <img src="http://vtransmap01.aot.state.vt.us/arcgis/rest/services/Rail/CrossingInspection2015/FeatureServer/1/625/attachments/3606" alt="" />  
+  </div>
 
 </body>
 </html>
