--- a/speedtest.html
+++ b/speedtest.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-  <div style="width: 50%">
-    <img src="IMG_0822.JPG" alt="" />  
-  </div>
-  <div style="width: 50%">
-    <img src="http://vtransmap01.aot.state.vt.us/arcgis/rest/services/Rail/CrossingInspection2015/FeatureServer/1/625/attachments/3606" alt="" />  
-  </div>
+  
+    <img src="IMG_0822.JPG" alt="" style="max-width: 50%;"/><img src="http://vtransmap01.aot.state.vt.us/arcgis/rest/services/Rail/CrossingInspection2015/FeatureServer/1/625/attachments/3606" alt="" style="max-width: 50%;"/>  
+  
 
 </body>
 </html>
