--- a/speedtest.html
+++ b/speedtest.html
@@ -8,7 +8,7 @@
 
 <body>
   
-    <img src="IMG_0822.JPG" alt="" style="max-width: 50%;"/><img src="http://vtransmap01.aot.state.vt.us/arcgis/rest/services/Rail/CrossingInspection2015/FeatureServer/1/625/attachments/3606" alt="" style="max-width: 50%;"/>  
+    <img src="http://vtransmap01.aot.state.vt.us/arcgis/rest/services/Rail/CrossingInspection2015/FeatureServer/1/625/attachments/3606" alt="" style="max-width: 50%;"/><img src="IMG_0822.JPG" alt="" style="max-width: 50%;"/>
   
 
 </body>
