--- a/speedtest.html
+++ b/speedtest.html
@@ -7,9 +7,10 @@
 </head>
 
 <body>
-  
-    <img src="http://vtransmap01.aot.state.vt.us/arcgis/rest/services/Rail/CrossingInspection2015/FeatureServer/1/625/attachments/3606" alt="" style="max-width: 50%;"/><img src="IMG_0822.JPG" alt="" style="max-width: 50%;"/>
-  
+
+    <img src="IMG_0822.JPG" alt="" style="max-width: 33%;"/>
+    <img src="http://services1.arcgis.com/NXmBVyW5TaiCXqFs/ArcGIS/rest/services/CrossingInspections2015/FeatureServer/1/625/attachments/3606" style="max-width: 33%"
+    <img src="http://vtransmap01.aot.state.vt.us/arcgis/rest/services/Rail/CrossingInspection2015/FeatureServer/1/625/attachments/3606" alt="" style="max-width: 33%;"/>
 
 </body>
 </html>
